Fixed spacing between Karlsen logo and explorer font

--- a/src/App.scss
+++ b/src/App.scss
@@ -165,7 +165,7 @@ body {
 
 @include media-breakpoint-up(md) {
   .bigfont {
-    margin-top: 4rem;
+    margin-top: 2.7rem;
     font-size: 4.4rem;
     line-height: 4.4rem;
   }
